profile images and other updates

--- a/about.html
+++ b/about.html
@@ -11,6 +11,12 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/full-width-pics.css" rel="stylesheet">
+    <style type="text/css">
+      .profile-img {
+        width: 300px;
+        height: 200px;
+      }
+    </style>
 </head>
 
 <body>
@@ -24,7 +30,7 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="data.html">Home
+              <a class="nav-link" href="data.html">Insights
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -50,10 +56,9 @@
         <section class="py-5">
       <div class="container">
         <h3>Authors</h3>
-        <ul>
-        	<li><a href="mailto:ellyrath@berkeley.edu?Subject=Hi" target="_top">Elly Rath</a></li>
-        	<li><a href="mailto:amshah@berkeley.edu?Subject=Hi" target="_top">Manish Shah</a></li>
-        </ul>
+        <img src="images/ellyrath.jpg" class="img-thumbnail profile-img"><p><a href="mailto:ellyrath@berkeley.edu?Subject=Hi" target="_top">Elly Rath</a> - I've been in the software industry for over 15 years and is an aspiring data scientist. When I'm not busy cranking code, I play with my two golden retrievers and toddler twins.</p>
+        	<br>
+        	<img src="images/manishshah.jpg" class="img-thumbnail profile-img"><p><a href="mailto:amshah@berkeley.edu?Subject=Hi" target="_top">Manish Shah</a> - I'm a veteran of the software industry and when I'm not on business trips, I spend time with my family and love to write stories</p>
       </div>
     </section>  
 
