--- a/data.html
+++ b/data.html
@@ -101,7 +101,7 @@ footer.show("slow");
                     <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="#">Insights
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -209,8 +209,10 @@ Some factors are listed below:
      <section class="py-5">
       <div class="container">
         <h1>The Top 50 Fatal Locations</h1>
+        <p>So let's look at a bird's eye view of the New York City to identify which areas have fatal accidents. The chart below depicts the accident prone areas in New York City. The chart illustrates that there are multiple areas where there have been fatal accidents over the years. While traveling these areas one has to be careful.
+        <br><img src="images/tips.png"> Use the year drop down to overlay different accident spots over the years. To understand the interaction for this chart click the "Usage" button.</p>
         <div id="chart1"> 
-     <h1 align="center">Top 50 places with fatal accidents by year</h1>
+     <!-- <h1 align="center">Top 50 places with fatal accidents by year</h1> -->
      <div style="float:left">
         <h3 id="map__text"></h3>
         <div id="btn-zoom" float="right">
@@ -229,7 +231,7 @@ Some factors are listed below:
      <br/>
      <br/>
      <div id="chart2">
-      <h1 align="center"> Street map view of Traffic Accidents</h1>
+      <!-- <h1 align="center"> Street map view of Traffic Accidents</h1> -->
          <div id="map_container2" style="width: 800px; height: 400px;"></div>
      </div>
 
