--- a/data.html
+++ b/data.html
@@ -125,7 +125,8 @@ footer.show("slow");
             <h1>Traffic collisions</h1>
             <p class="lead">NYC traffic collisions from 2012 to 2018</p>
             <p>Every year more than 200,000 vehicle collisions occur in the five boroughs of New York City. The NYPD began publishing a data set of every recorded vehicle collsion in the city in July of 2011. The aim of this project is to analyze the Traffic Collision dataset and present visually identifiable patterns that would enable city planners, traffic management and commuters to make informed choices and reduce risk of collisions.</p>
-            <p>The visualization below processes <i><strong>1.23 million</strong></i> data points for traffic collisions in the city of New York everyday from <u>August 2012</u> to <u>March 2018</u>.</p>
+            <p>The visualization below processes <i><strong>1.23 million</strong></i> data points for traffic collisions in the city of New York everyday from <u>August 2012</u> to <u>March 2018</u>.
+            <br><img src="images/tips.png"> Hover over the graph to get the number of accidents that happened on a particular day</p></p>
         </div>
     </section>
     <!-- Image Section - set the background image for the header in the line below -->
