--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <section class="py-5">
       <div class="container">
         <h3>Authors</h3>
-        <img src="images/ellyrath.jpg" class="img-thumbnail profile-img"><p><a href="mailto:ellyrath@berkeley.edu?Subject=Hi" target="_top">Elly Rath</a> - I've been in the software industry for over 15 years and is an aspiring data scientist. When I'm not busy cranking code, I play with my two golden retrievers and toddler twins.</p>
+        <img src="images/ellyrath.jpg" class="img-thumbnail profile-img"><p><a href="mailto:ellyrath@berkeley.edu?Subject=Hi" target="_top">Elly Rath</a> - I've been in the software industry for over 15 years and an aspiring data scientist. When I'm not busy cranking code, I play with my two golden retrievers and toddler twins.</p>
         	<br>
         	<img src="images/manishshah.jpg" class="img-thumbnail profile-img"><p><a href="mailto:amshah@berkeley.edu?Subject=Hi" target="_top">Manish Shah</a> - I'm a veteran of the software industry and when I'm not on business trips, I spend time with my family and love to write stories</p>
       </div>
