--- a/data.html
+++ b/data.html
@@ -141,7 +141,7 @@ footer.show("slow");
       <div class="container">
         <h1>What are NY boroughs?</h1>
         <p>New York City encompasses five different county-level administrative divisions called boroughs: Manhattan, the Bronx, Queens, Brooklyn, and Staten Island. All boroughs are part of New York City, and each of the boroughs is coextensive with a respective county, the primary administrative subdivision within New York State. The Bronx and Queens are concurrent with the counties of the same name, while Manhattan, Brooklyn, and Staten Island correspond to New York, Kings, and Richmond Counties respectively.</p>
-        <img src="images/borough-desc.png ">
+        <img src="images/borough-desc.png " style="width: 1000px">
       </div>
     </section>
 
