--- a/data.html
+++ b/data.html
@@ -236,7 +236,7 @@ Some factors are listed below:
      <p> If you are traveling through a particular road knowing the upcoming accident prone intersections would help. The street view map below provides the information. The user can move around the chart to identify the intersection and route of their travel.</p>
      <div id="chart2">
       <!-- <h1 align="center"> Street map view of Traffic Accidents</h1> -->
-         <div id="map_container2" style="width: 800px; height: 400px;"></div>
+         <div id="map_container2"></div>
      </div>
 
 
